Fixed html & hero & typo

--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="styles/main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,500" rel="stylesheet">
   <title>Evaluación Sprint 1</title>
 </head>
 <body>
-
-  <main>
+  
+  <header>
     <div class="hero">
-      <div class="button--menu">
-        <img src="../images/ico-menu.svg" alt="icon menu">
+      <div class="">
+        <button type="button--menu" name="button">
+          <a href="#"><img src="../images/ico-menu.svg" alt="icon menu"></a>
+        </button>
       </div>
-      <h1>anonymous proxy</h1>
+      <h1 class="title--h1">anonymous proxy</h1>
       <p>In hac habitasse platea dictumst.</p>
       <div class="">
         <button type="button button--down" name="button">
-          <img src="../images/ico-scroll-down.svg" alt="">
+          <a href="#"><img src="../images/ico-scroll-down.svg" alt=""></a>
         </button>
       </div>
     </div>
-
+  </header>
+  <main>
     <article class="">
       <p>Insomnia Tips</p>
       <h2>Looking Through A Window</h2>
@@ -29,7 +33,9 @@
         Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
       </p>
       <div class="">
-        <button type="button--go" name="button"></button>
+        <button type="button--go" name="button">
+          <a href="#"></a>
+        </button>
       </div>
     </article>
 
@@ -42,7 +48,9 @@
       <p>Morbi dictum</p>
       <p>Aliquam in dolor et dolor tincidunt.</p>
       <div class="">
-        <button type="button--mr" name="button"></button>
+        <button type="button--mr" name="button">
+          <a href="#"></a>
+        </button>
       </div>
     </section>
   </main>
@@ -50,7 +58,7 @@
   <footer>
     <div class="">
       <button type="button button--up" name="button">
-        <img src="../images/ico-arrow.svg" alt="">
+        <a href="#"><img src="../images/ico-arrow.svg" alt=""></a>
       </button>
     </div>
     <p>&#9400;2017</p>
