--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Evaluación Sprint 1</title>
 </head>
 <body>
-  
+
   <header>
     <div class="hero">
       <div class="">
@@ -17,7 +17,7 @@
         </button>
       </div>
       <h1 class="title--h1">anonymous proxy</h1>
-      <p>In hac habitasse platea dictumst.</p>
+      <p class="txt--giro">In hac habitasse platea dictumst.</p>
       <div class="">
         <button type="button button--down" name="button">
           <a href="#"><img src="../images/ico-scroll-down.svg" alt=""></a>
@@ -25,6 +25,7 @@
       </div>
     </div>
   </header>
+
   <main>
     <article class="">
       <p>Insomnia Tips</p>
@@ -53,6 +54,7 @@
         </button>
       </div>
     </section>
+
   </main>
 
   <footer>
