--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 
   <header>
     <div class="hero">
-      <div class="">
-        <button type="button--menu" name="button">
-          <a href="#"><img src="../images/ico-menu.svg" alt="icon menu"></a>
-        </button>
-      </div>
+
+      <button type="button" name="button" class="button--menu">
+        <a href="#"><img src="../images/ico-menu.svg" alt="icon menu"></a>
+      </button>
+
       <h1 class="title--h1">anonymous proxy</h1>
+
       <p class="txt--giro">In hac habitasse platea dictumst.</p>
-      <div class="">
-        <button type="button button--down" name="button">
-          <a href="#"><img src="../images/ico-scroll-down.svg" alt=""></a>
-        </button>
-      </div>
+
+      <button type="button" name="button" class="button--down">
+        <a href="#"><img src="../images/ico-scroll-down.svg" alt=""></a>
+      </button>
+
     </div>
   </header>
 
@@ -33,11 +34,11 @@
       <p>
         Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
       </p>
-      <div class="">
-        <button type="button--go" name="button">
-          <a href="#"></a>
-        </button>
-      </div>
+
+      <button type="button" name="button" class="button--go">
+        <a href="#"></a>
+      </button>
+
     </article>
 
     <section>
@@ -48,21 +49,20 @@
       <p>Mauris mattis urna quis lorem molestie.</p>
       <p>Morbi dictum</p>
       <p>Aliquam in dolor et dolor tincidunt.</p>
-      <div class="">
-        <button type="button--mr" name="button">
-          <a href="#"></a>
-        </button>
-      </div>
+
+      <button type="button" name="button" class="button--mr">
+        <a href="#"></a>
+      </button>
+
     </section>
 
   </main>
 
   <footer>
-    <div class="">
-      <button type="button button--up" name="button">
-        <a href="#"><img src="../images/ico-arrow.svg" alt=""></a>
-      </button>
-    </div>
+    <button type="button" name="button" class="button--up">
+      <a href="#"><img src="../images/ico-arrow.svg" alt=""></a>
+    </button>
+
     <p>&#9400;2017</p>
     <p>we <span>&#10084;</span> components</p>
   </footer>
