Add section text style

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   </header>
 
   <main>
-    <article class="">
-      <p>Insomnia Tips</p>
-      <h2>Looking Through A Window</h2>
-      <p>
+    <article class="article">
+      <p class="txt--xs">Insomnia Tips</p>
+      <h2 class="title--h2">Looking Through A Window</h2>
+      <p class="txt--article">
         Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
       </p>
 
@@ -42,7 +42,7 @@
     </article>
 
     <section>
-      <h2>3 Reasons To Purchase</h2>
+      <h2 class="title--h2">3 Reasons To Purchase</h2>
       <p>Ut sed metus</p>
       <p>Lorem ipsum dolor sit amet, consecteur.</p>
       <p>Curabitur ac erat</p>
