Add section styles

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </p>
 
       <button type="button" name="button" class="button--go">
-        <a href="#"></a>
+        <a href="#" class="link--go">Go</a>
       </button>
 
     </article>
