Add section home style

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <main>
     <article class="article">
       <p class="txt--xs">Insomnia Tips</p>
-      <h2 class="title--h2">Looking Through A Window</h2>
+      <h2 class="title--article title--h2">Looking Through A Window</h2>
       <p class="txt--article">
         Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
       </p>
