Add grid content

--- a/index.html
+++ b/index.html
@@ -21,39 +21,45 @@
       <p class="txt--giro">In hac habitasse platea dictumst.</p>
 
       <button type="button" name="button" class="button--down">
-        <a href="#"><img src="../images/ico-scroll-down.svg" alt=""></a>
+        <a href="#article"><img src="../images/ico-scroll-down.svg" alt=""></a>
       </button>
 
     </div>
   </header>
 
   <main>
-    <article class="article">
+    <article id="article" class="article">
       <p class="txt--xs">Insomnia Tips</p>
       <h2 class="title--article title--h2">Looking Through A Window</h2>
       <p class="txt--article">
         Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
       </p>
-
       <button type="button" name="button" class="button--go">
         <a href="#" class="link--go">Go</a>
       </button>
-
     </article>
 
-    <section>
-      <h2 class="title--h2">3 Reasons To Purchase</h2>
-      <p>Ut sed metus</p>
-      <p>Lorem ipsum dolor sit amet, consecteur.</p>
-      <p>Curabitur ac erat</p>
-      <p>Mauris mattis urna quis lorem molestie.</p>
-      <p>Morbi dictum</p>
-      <p>Aliquam in dolor et dolor tincidunt.</p>
-
-      <button type="button" name="button" class="button--mr">
-        <a href="#"></a>
-      </button>
-
+    <section class="wrapper">
+      <div class="item item-1">
+        <h2 class="title--h2 title--1">3 Reasons To Purchase</h2>
+      </div>
+      <div class="item item-2">
+        <p class="title--wrapper">Ut sed metus</p>
+        <p class="txt--wrapper">Lorem ipsum dolor sit amet, consecteur.</p>
+      </div>
+      <div class="item item-2">
+        <p class="title--wrapper">Curabitur ac erat</p>
+        <p class="txt--wrapper">Mauris mattis urna quis lorem molestie.</p>
+      </div>
+      <div class="item item-2">
+        <p class="title--wrapper">Morbi dictum</p>
+        <p class="txt--wrapper">Aliquam in dolor et dolor tincidunt.</p>
+      </div>
+      <div class="item item-3">
+        <button type="button" name="button" class="button--mr">
+          <a href="#">More reasons</a>
+        </button>
+      </div>
     </section>
 
   </main>
