Finish grid styles

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <p class="txt--giro">In hac habitasse platea dictumst.</p>
 
-      <button type="button" name="button" class="button--down">
+      <button type="button" name="button" class="button--round button--down">
         <a href="#article"><img src="../images/ico-scroll-down.svg" alt=""></a>
       </button>
 
@@ -57,7 +57,7 @@
       </div>
       <div class="item item-3">
         <button type="button" name="button" class="button--mr">
-          <a href="#">More reasons</a>
+          <a href="#" class="link--mr">More reasons</a>
         </button>
       </div>
     </section>
@@ -65,7 +65,7 @@
   </main>
 
   <footer>
-    <button type="button" name="button" class="button--up">
+    <button type="button" name="button" class="button--round button--up">
       <a href="#"><img src="../images/ico-arrow.svg" alt=""></a>
     </button>
 
