--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 
   </main>
 
-  <footer>
+  <footer class="footer">
     <button type="button" name="button" class="button--round button--up">
       <a href="#"><img src="../images/ico-arrow.svg" alt=""></a>
     </button>
 
-    <p>&#9400;2017</p>
-    <p>we <span>&#10084;</span> components</p>
+    <p class="txt--footer">&#9400;2017</p>
+    <p class="txt--footer">we <span>&#10084;</span> components</p>
   </footer>
 
 </body>
