--- a/index.html
+++ b/index.html
@@ -9,20 +9,16 @@
 </head>
 <body>
 
-  <header>
+  <header id="top">
     <div class="hero">
 
-      <button type="button" name="button" class="button--menu">
-        <a href="#"><img src="../images/ico-menu.svg" alt="icon menu"></a>
-      </button>
+        <a href="#" class="button--menu"><img src="../images/ico-menu.svg" alt="icon menu"></a>
 
       <h1 class="title--h1">anonymous proxy</h1>
 
       <p class="txt--giro">In hac habitasse platea dictumst.</p>
 
-      <button type="button" name="button" class="button--round button--down">
-        <a href="#article"><img src="../images/ico-scroll-down.svg" alt=""></a>
-      </button>
+        <a href="#article" class="button--round button--down"><img src="../images/ico-scroll-down.svg" alt=""></a>
 
     </div>
   </header>
@@ -34,9 +30,7 @@
       <p class="txt--article">
         Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.
       </p>
-      <button type="button" name="button" class="button--go">
-        <a href="#" class="link--go">Go</a>
-      </button>
+        <a href="#" class="button--go link--go">Go</a>
     </article>
 
     <section class="wrapper">
@@ -56,21 +50,21 @@
         <p class="txt--wrapper">Aliquam in dolor et dolor tincidunt.</p>
       </div>
       <div class="item item-3">
-        <button type="button" name="button" class="button--mr">
-          <a href="#" class="link--mr">More reasons</a>
-        </button>
+
+          <a href="#" class="button--mr link--mr">More reasons</a>
+
       </div>
     </section>
 
   </main>
 
   <footer class="footer">
-    <button type="button" name="button" class="button--round button--up">
-      <a href="#"><img src="../images/ico-arrow.svg" alt=""></a>
-    </button>
 
-    <p class="txt--footer">&#9400;2017</p>
-    <p class="txt--footer">we <span>&#10084;</span> components</p>
+      <a href="#top" class="button--round button--up"><img src="../images/ico-arrow.svg" alt=""></a>
+
+
+    <p class="txt--footer footer--copy">&#9400;2017</p>
+    <p class="txt--footer footer--heart">we <span class="heart">&#10084;</span> components</p>
   </footer>
 
 </body>
