--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="es" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="styles/main.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,500" rel="stylesheet">
+  <link rel="stylesheet" href="./styles/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Evaluación Sprint 1</title>
 </head>
 <body>
