--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <header id="top">
     <div class="hero">
 
-        <a href="#" class="button--menu"><img src="./../images/ico-menu.svg" alt="icon menu"></a>
+        <a href="#" class="button--menu"><img src="../images/ico-menu.svg" alt="icon menu"></a>
 
       <h1 class="title--h1">anonymous proxy</h1>
 
       <p class="txt--giro">In hac habitasse platea dictumst.</p>
 
-        <a href="#article" class="button--round button--down"><img src="./../images/ico-scroll-down.svg" alt=""></a>
+        <a href="#article" class="button--round button--down"><img src="../images/ico-scroll-down.svg" alt=""></a>
 
     </div>
   </header>
@@ -60,7 +60,7 @@
 
   <footer class="footer">
 
-      <a href="#top" class="button--round button--up"><img src="./../images/ico-arrow.svg" alt=""></a>
+      <a href="#top" class="button--round button--up"><img src="../images/ico-arrow.svg" alt=""></a>
 
 
     <p class="txt--footer footer--copy">&#9400;2017</p>
