--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
       <a href="#" class="button--go link--go">Go</a>
 
     </article>
-
-    <section class="wrapper">
+<section class="grid-box">
+    <div class="wrapper">
       <div class="item item-1">
         <h2 class="title--h2 title--1">3 Reasons To Purchase</h2>
       </div>
-      <div class="item item-2">
+      <div class="item item-2 item-mid1">
         <p class="title--wrapper">Ut sed metus</p>
         <p class="txt--wrapper">Lorem ipsum dolor sit amet, consecteur.</p>
       </div>
-      <div class="item item-2">
+      <div class="item item-2 item-mid2">
         <p class="title--wrapper">Curabitur ac erat</p>
         <p class="txt--wrapper">Mauris mattis urna quis lorem molestie.</p>
       </div>
-      <div class="item item-2">
+      <div class="item item-2 item-mid3">
         <p class="title--wrapper">Morbi dictum</p>
         <p class="txt--wrapper">Aliquam in dolor et dolor tincidunt.</p>
       </div>
@@ -51,8 +51,8 @@
         <a href="#" class="button--mr link--mr">More reasons</a>
 
       </div>
-    </section>
-
+    </div>
+</section>
   </main>
 
   <footer class="footer">
