--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
   </header>
 
   <main>
+    <section class="new-section">
+      <h2>Anonymous</h2>
+      <p>
+        15/06/2018
+      </p>
+    </section>
+
     <article id="article" class="article">
       <p class="txt--xs">Insomnia Tips</p>
       <h2 class="title--article title--h2">Looking Through A Window</h2>
